crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Variance_parameters_…_(3012e69bb401f693).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Variance parameters must be unambiguous
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVar
 2 | 
 3 | def cond() -> bool:
 4 |     return True
 5 | 
 6 | # error: [invalid-legacy-type-variable]
 7 | T = TypeVar("T", covariant=cond())
 8 | 
 9 | # error: [invalid-legacy-type-variable]
10 | U = TypeVar("U", contravariant=cond())
```

# Diagnostics

```
error[invalid-legacy-type-variable]: The `covariant` parameter of `TypeVar` cannot have an ambiguous truthiness
 --> src/mdtest_snippet.py:7:18
  |
6 | # error: [invalid-legacy-type-variable]
7 | T = TypeVar("T", covariant=cond())
  |                  ^^^^^^^^^^^^^^^^
8 |
9 | # error: [invalid-legacy-type-variable]
  |
info: rule `invalid-legacy-type-variable` is enabled by default

```

```
error[invalid-legacy-type-variable]: The `contravariant` parameter of `TypeVar` cannot have an ambiguous truthiness
  --> src/mdtest_snippet.py:10:18
   |
 9 | # error: [invalid-legacy-type-variable]
10 | U = TypeVar("U", contravariant=cond())
   |                  ^^^^^^^^^^^^^^^^^^^^
   |
info: rule `invalid-legacy-type-variable` is enabled by default

```
